minor styling updates to prevent scrolbar shifting content across. update colour of active nav element

--- a/Client/src/App.scss
+++ b/Client/src/App.scss
@@ -31,6 +31,7 @@ h1 {
 body {
 	background-color: #EFEFEF;
 	margin: 0px;
+	overflow-y: scroll;
 }
 
 h2 {
