--- a/Client/src/scss/Components/Navigation/NavigationBar.scss
+++ b/Client/src/scss/Components/Navigation/NavigationBar.scss
@@ -134,7 +134,7 @@
 	}
 
 	.active {
-		color: gray;
+		color: white;
 	}
 	.active::before {
 		height: 2px;
