--- a/Client/src/scss/Pages/Home.scss
+++ b/Client/src/scss/Pages/Home.scss
@@ -3,8 +3,9 @@
 	background-repeat: no-repeat;
 	background-color: #EFEFEF;
 	margin-bottom: 15rem;
-	height: 100%
+	height: 100%;
 }
+
 
 #home-slide {
 	width: 100%;
